fix: header font is now white for visibility

--- a/themes/bbmri-de/_variables.scss
+++ b/themes/bbmri-de/_variables.scss
@@ -9,6 +9,7 @@ $mg-header-font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $mg-border-radius: 4px;
 $mg-box-shadow: none;
 $mg-body-bg: #fff;
+$mg-header: #fff;
 
 $mg-navbar-link-active-bg: #e7e7e7;
 $mg-navbar-link-active-color: #555;
